feat: 新增 Docker 环境下 GCC 编译运行示例